--- a/calendar.html
+++ b/calendar.html
@@ -4,8 +4,8 @@
 <script src="https://d3js.org/d3.v4.min.js"></script>
 <script>
 
-var width = 960,
-    height = 136,
+var height = 884,
+    width = 136,
     cellSize = 17;
 
 var formatPercent = d3.format(".1%");
@@ -20,8 +20,6 @@ var svg = d3.select("body")
   .enter().append("svg")
     .attr("width", width)
     .attr("height", height)
-  .append("g")
-    .attr("transform", "translate(" + ((width - cellSize * 53) / 2) + "," + (height - cellSize * 7 - 1) + ")");
 
 svg.append("text")
     .attr("transform", "translate(-6," + cellSize * 3.5 + ")rotate(-90)")
@@ -38,8 +36,8 @@ var rect = svg.append("g")
   .enter().append("rect")
     .attr("width", cellSize)
     .attr("height", cellSize)
-    .attr("x", function(d) { return d3.timeWeek.count(d3.timeYear(d), d) * cellSize; })
-    .attr("y", function(d) { return d.getDay() * cellSize; })
+    .attr("y", function(d) { return d3.timeWeek.count(d3.timeYear(d), d) * cellSize; })
+    .attr("x", function(d) { return d.getDay() * cellSize; })
     .datum(d3.timeFormat("%Y-%m-%d"));
 
 svg.append("g")
@@ -68,11 +66,10 @@ function pathMonth(t0) {
   var t1 = new Date(t0.getFullYear(), t0.getMonth() + 1, 0),
       d0 = t0.getDay(), w0 = d3.timeWeek.count(d3.timeYear(t0), t0),
       d1 = t1.getDay(), w1 = d3.timeWeek.count(d3.timeYear(t1), t1);
-  return "M" + (w0 + 1) * cellSize + "," + d0 * cellSize
-      + "H" + w0 * cellSize + "V" + 7 * cellSize
-      + "H" + w1 * cellSize + "V" + (d1 + 1) * cellSize
-      + "H" + (w1 + 1) * cellSize + "V" + 0
-      + "H" + (w0 + 1) * cellSize + "Z";
+  return "M" + d0* cellSize + "," + (w0 + 1)* cellSize
+  + "V" + w0 * cellSize + "H" + 7 * cellSize + "V" + w1 * cellSize +
+  "M" + d0* cellSize + "," + (w0 + 1)* cellSize
+  + "H" + 0 + "V" + w1*cellSize
 }
 
 </script>
