--- a/calendar.html
+++ b/calendar.html
@@ -4,7 +4,7 @@
 <script src="https://d3js.org/d3.v4.min.js"></script>
 <script>
 
-var height = 884,
+var height = 920,
     width = 136,
     cellSize = 17;
 
@@ -20,6 +20,8 @@ var svg = d3.select("body")
   .enter().append("svg")
     .attr("width", width)
     .attr("height", height)
+  .append("g")
+    .attr("transform", "translate(" +  (width - cellSize * 7 - 1) + "," + ((height - cellSize * 53) / 2) + ")");
 
 svg.append("text")
     .attr("transform", "translate(-6," + cellSize * 3.5 + ")rotate(-90)")
@@ -67,9 +69,8 @@ function pathMonth(t0) {
       d0 = t0.getDay(), w0 = d3.timeWeek.count(d3.timeYear(t0), t0),
       d1 = t1.getDay(), w1 = d3.timeWeek.count(d3.timeYear(t1), t1);
   return "M" + d0* cellSize + "," + (w0 + 1)* cellSize
-  + "V" + w0 * cellSize + "H" + 7 * cellSize + "V" + w1 * cellSize +
-  "M" + d0* cellSize + "," + (w0 + 1)* cellSize
-  + "H" + 0 + "V" + w1*cellSize
+  + "V" + w0 * cellSize + "H" + 7 * cellSize
+  + "V" + w1 * cellSize + "H" +  (d1+1) * cellSize
+  + "V" + (w1 + 1) * cellSize + "H" + 0 + "V" + w0 * cellSize
 }
-
 </script>
